<?xml version="1.0"?>
<package>
  <name>rqt_top_multi_machine</name>
  <version>0.4.8</version>
  <description>RQT plugin for monitoring ROS processes.</description>

  <author email="todo@todo.com">Joshua Roe</author>
  <maintainer email="todo@todo.com">Joshua Roe</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_top</url>
  <url type="repository">https://github.com/Joshua-Roe/rqt_top_multi_machine</url>
  <url type="bugtracker">https://github.com/Joshua-Roe/rqt_top_multi_machine/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-psutil</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
